[gd_scene load_steps=5 format=3 uid="uid://hs7y1i180f44"]

[ext_resource type="Script" path="res://Scripts/TutorialScene.gd" id="1_n26b2"]
[ext_resource type="PackedScene" uid="uid://qsbkrquy534k" path="res://Scenes/TrainBuilderUI.tscn" id="2_d8plr"]
[ext_resource type="Script" path="res://Scripts/WordBankVisual.gd" id="2_dtcqw"]
[ext_resource type="PackedScene" uid="uid://bi6al460mrfr6" path="res://Scenes/Trainstation.tscn" id="3_m7lrv"]

[node name="Control" type="Control" node_paths=PackedStringArray("WordBankNode", "trainBay", "trainStation")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_n26b2")
level_word_list = "res://StaticData/tutorial_words.json"
WordBankNode = NodePath("VBoxContainer/WordBankNode")
trainBay = NodePath("VBoxContainer/TrainBuilderUI/Panel/TrainBayUI/TrainBay")
trainStation = NodePath("VBoxContainer/Trainstation")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -640.0
offset_right = 640.0
offset_bottom = 800.0
grow_horizontal = 2

[node name="WordBankNode" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
alignment = 1
script = ExtResource("2_dtcqw")

[node name="TrainBuilderUI" parent="VBoxContainer" instance=ExtResource("2_d8plr")]
layout_mode = 2

[node name="TrainBay" parent="VBoxContainer/TrainBuilderUI/Panel/TrainBayUI" index="0" node_paths=PackedStringArray("wordBankNode")]
wordBankNode = NodePath("../../../../WordBankNode")

[node name="Trainstation" parent="VBoxContainer" instance=ExtResource("3_m7lrv")]
layout_mode = 2

[node name="ExitToLevelSelect" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -168.0
offset_bottom = 32.0
grow_horizontal = 0
text = "Exit to Level Select"

[connection signal="child_order_changed" from="VBoxContainer/WordBankNode" to="." method="_on_word_bank_node_child_order_changed"]
[connection signal="child_order_changed" from="VBoxContainer/TrainBuilderUI/Panel/TrainBayUI/TrainBay" to="." method="_on_train_bay_child_order_changed"]
[connection signal="pressed" from="VBoxContainer/TrainBuilderUI/BadgeUI/CycleBadgeUp" to="." method="_on_cycle_badge_up_pressed"]
[connection signal="pressed" from="VBoxContainer/TrainBuilderUI/BadgeUI/CycleBadgeDown" to="." method="_on_cycle_badge_down_pressed"]
[connection signal="child_order_changed" from="VBoxContainer/Trainstation" to="." method="_on_trainstation_child_order_changed"]
[connection signal="pressed" from="ExitToLevelSelect" to="." method="_on_exit_to_level_select_pressed"]

[editable path="VBoxContainer/TrainBuilderUI"]
